--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -1,6 +1,36 @@
-<app-progresso></app-progresso>
-<app-tentativas></app-tentativas>
-<p>Componente Painel</p>
 
-<button class="btn btn-primary">Teste</button>
+<div class="container">
+    <div class="p-5 mb-4 rounded-3" id="painel">
+        <div class="row">
+            <div class="col-sm-6">
+                <app-progresso></app-progresso>
+            </div>
+            <div class="col-sm-6">
+                <div class="d-flex justify-content-end">
+                <app-tentativas></app-tentativas>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h6>Traduza a frase:</h6>
+                <p>How are you?</p>
+                <div class="form-group">
+                    <textarea rows="3" class="form-control"></textarea>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary">Verificar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
