--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -14,19 +14,23 @@
 
         <div class="row">
             <div class="col">
-                <h6>Traduza a frase:</h6>
-                <p>How are you?</p>
+                <h6>{{instrucao}}</h6>
+                <p>{{rodadaFrase.fraseEng}}</p>
+
                 <div class="form-group">
-                    <textarea rows="3" class="form-control"></textarea>
-                </div>
-                
+                    <textarea 
+                        rows="3" 
+                        class="form-control"
+                        (input)="AtualizarResposta($event)"
+                    ></textarea>
+                </div>                
             </div>
         </div>
 
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-primary">Verificar</button>
+                    <button type="button" class="btn btn-primary" (click)="verificarResposta()">Verificar</button>
                 </div>
             </div>
         </div>
