--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,3 +1,3 @@
-<img [src]="coracaoVazio" />
+<!-- <img [src]="coracaoVazio" />
 <img [src]="coracaoCheio" />
-<img [src]="coracaoCheio" />
+<img [src]="coracaoCheio" /> -->
