--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,26 @@
 <app-topo></app-topo>
-<app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+
+<div *ngIf="jogoEmAndamento; else fimDeJogo">
+    <app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+</div>
+
+<ng-template #fimDeJogo>
+    <div *ngIf="tipoEncerramento === 'derrota'; else fimDeJogoVitoria" class="container" style="margin-top: 50px;">
+        <div class="row">
+            <div class="col">
+                <h2 style="color: red;">O jogo acabou, infelizmente você perdeu!</h2>
+                <button class="btn btn-primary" (click)="reiniciarJogo()">Reiniciar Jogo</button>
+            </div>
+        </div>
+    </div>
+</ng-template>
+<ng-template #fimDeJogoVitoria>
+    <div class="container" style="margin-top: 50px;">
+        <div class="row">
+            <div class="col">
+                <h2 style="color: green;">Parabéns, você venceu!</h2>
+                <button class="btn btn-primary" (click)="reiniciarJogo()">Reiniciar Jogo</button>
+            </div>
+        </div>
+    </div>
+</ng-template>
